--- a/app/src/main/res/layout/activity_cassava_farms.xml
+++ b/app/src/main/res/layout/activity_cassava_farms.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#21BEDE"
     android:orientation="vertical"
     tools:context=".CassavaFarms">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#7ec0ee"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ThemeOverlay.AppCompat.Dark" />
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/fr"/>
+        android:layout_height="120dp"
+        android:background="@drawable/frm"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,5 +26,95 @@
         android:textStyle="bold"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="20dp"/>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/barChart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#7ec0ee"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/wallet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#7ec0ee"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#7ec0ee"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Full Details"
+        android:textStyle="italic"
+        android:textSize="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+    <Button
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"/>
+    <Button
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+        <Button
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"/>
+        <Button
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"/>
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"/>
+        <Button
+            android:layout_width="155dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"/>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="235dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="82dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="20dp"/>
+
+
+
+
+
+
+
+
+
+
 
 </LinearLayout>
