--- a/app/src/main/res/layout/activity_farm.xml
+++ b/app/src/main/res/layout/activity_farm.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Farm">
-    
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -81,203 +81,45 @@
         app:layout_constraintTop_toBottomOf="@id/textView3"/>
 
 
-    <LinearLayout
-        android:id="@+id/LinearLayout"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="35dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        android:text="Expected Returns"
+        android:textColor="#7CFC00"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Expected Returns"
-            android:textColor="#7CFC00"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Unit Price"
-            android:textColor="	#7CFC00"
-            android:layout_marginLeft="90dp"
-            android:layout_marginStart="90dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/LinearLayout1"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayout">
+        android:layout_marginTop="20dp"
+        android:text="#50.000 per Unit"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="35% Returns in 7 months"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"
-            android:text="#50,000"
-            android:textSize="20sp"/>
-
-
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/LinearLayout2"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Expected Returns"
+        android:textColor="#7CFC00"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/LinearLayout1">
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Location"
-            android:textColor="#7CFC00"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Start Date"
-            android:textColor="#7CFC00"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/LinerLayout3"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Ogun State"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="15th April 2020"
-            android:textSize="20sp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"/>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/LinearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinerLayout3">
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Maturity Date"
-            android:textColor="#7CFC00"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="Current Value"
-            android:textColor="#7CFC00"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"/>
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/LinearLayout5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayout4">
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="16th NOvember, 2020"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"/>
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="#50.000 per Unit"
-            android:textSize="20sp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/LinearLayout6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayout5">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginStart="40dp"
-            android:text="-"
-            android:textSize="30dp"
-            android:textStyle="bold"/>
-            <EditText
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginStart="30dp"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:text="+"
-            android:textSize="30dp"
-            android:textStyle="bold"/>
-    </LinearLayout>
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Add To Cart"
-        android:background="#7CFC00"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayout6"/>
-
-
-
-
+        android:layout_marginTop="20dp"
+        android:text="#50.000 per Unit"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 
